--- a/org.sonatype.m2e.mavenarchiver.tests/pom.xml
+++ b/org.sonatype.m2e.mavenarchiver.tests/pom.xml
@@ -10,8 +10,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.sonatype.m2e.extras</groupId>
-    <artifactId>m2eclipse-extras</artifactId>
+    <groupId>org.sonatype.m2e.extras</groupId>  
+    <artifactId>org.sonatype.m2e.mavenarchiver.parent</artifactId>
     <version>0.15.0-SNAPSHOT</version>
   </parent>
 
