--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,16 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>io.tesla.tycho</groupId>
+    <groupId>io.takari.tycho</groupId>
     <artifactId>tycho-support</artifactId>
-    <version>0.0.12</version>
+    <version>0.14.0</version>
   </parent>
   
-  <groupId>org.sonatype.m2e.extras</groupId>  
+  <!--
+  <groupId>org.sonatype.m2e.mavenarchiver</groupId>  
+  Use exising groupId for now until we figure out how to migrate people. If it matters.
+  -->
+  <groupId>org.sonatype.m2e.extras</groupId>
   <artifactId>org.sonatype.m2e.mavenarchiver.parent</artifactId>
   <version>0.16.0-SNAPSHOT</version>
   <packaging>pom</packaging>
@@ -24,22 +28,13 @@
 
   <properties>
     <repositoryPathId>m2eclipse-mavenarchiver</repositoryPathId>
-    <p2MetadataName>M2E Maven Archiver Connector</p2MetadataName>
-    <tychoVersion>0.18.0</tychoVersion>
-  </properties>  
-  
-  <repositories>
-    <repository>
-      <id>m2e-tests</id>
-      <url>http://download.eclipse.org/technology/m2e/releases/</url>
-      <layout>p2</layout>
-    </repository>      
-  </repositories>  
-    
+  </properties>
+
   <modules>
     <module>org.sonatype.m2e.mavenarchiver</module>
     <module>org.sonatype.m2e.mavenarchiver.feature</module>
     <module>org.sonatype.m2e.mavenarchiver.tests</module>
+    <module>org.sonatype.m2e.mavenarchiver.repository</module>
   </modules>
 
 </project>
