--- a/org.sonatype.m2e.mavenarchiver.tests/pom.xml
+++ b/org.sonatype.m2e.mavenarchiver.tests/pom.xml
@@ -12,7 +12,7 @@
   <parent>
     <groupId>org.sonatype.m2e.extras</groupId>  
     <artifactId>org.sonatype.m2e.mavenarchiver.parent</artifactId>
-    <version>0.16.0-SNAPSHOT</version>
+    <version>0.17.0</version>
   </parent>
 
   <artifactId>org.sonatype.m2e.mavenarchiver.tests</artifactId>
