--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   -->
   <groupId>org.sonatype.m2e.extras</groupId>
   <artifactId>org.sonatype.m2e.mavenarchiver.parent</artifactId>
-  <version>0.17.0</version>
+  <version>0.17.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>M2E Maven Archiver Connector</name>
 
