--- a/org.sonatype.m2e.mavenarchiver/build.properties
+++ b/org.sonatype.m2e.mavenarchiver/build.properties
@@ -2,5 +2,6 @@ source.. = src/
 output.. = target/classes
 bin.includes = META-INF/,\
                .,\
+               .takaristats,\
                plugin.xml,\
                lifecycle-mapping-metadata.xml
