--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  Copyright (c) 2008 Sonatype, Inc.
+  Copyright (c) 2008-2020 Sonatype, Inc.
   All rights reserved. This program and the accompanying materials
-  are made available under the terms of the Eclipse Public License v1.0
+  are made available under the terms of the Eclipse Public License 2.0
   which accompanies this distribution, and is available at
-  http://www.eclipse.org/legal/epl-v10.html
+  https://www.eclipse.org/legal/epl-2.0/
+
+  SPDX-License-Identifier: EPL-2.0
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -15,22 +17,28 @@
     <artifactId>tycho-support</artifactId>
     <version>1.1.0</version>
   </parent>
-
+  <licenses>
+    <license>
+      <name>Eclipse Public License - v 2.0</name>
+      <url>http://www.eclipse.org/legal/epl-v20.html</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
   <!--
   <groupId>org.sonatype.m2e.mavenarchiver</groupId>
   Use exising groupId for now until we figure out how to migrate people. If it matters.
   -->
   <groupId>org.sonatype.m2e.extras</groupId>
   <artifactId>org.sonatype.m2e.mavenarchiver.parent</artifactId>
-  <version>0.17.4-SNAPSHOT</version>
+  <version>0.17.5-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>M2E Maven Archiver Connector</name>
 
   <properties>
     <repositoryPathId>m2eclipse-mavenarchiver</repositoryPathId>
-    <tychoVersion>1.4.0</tychoVersion>
-    <m2e-core.url>http://download.eclipse.org/technology/m2e/releases/1.11/</m2e-core.url>
-    <eclipse.stream>2019-03</eclipse.stream>
+    <tychoVersion>1.6.0</tychoVersion>
+    <m2e-core.url>http://download.eclipse.org/technology/m2e/releases/1.14/</m2e-core.url>
+    <eclipse.stream>2019-12</eclipse.stream>
     <eclipse-repo.url>http://download.eclipse.org/releases/${eclipse.stream}</eclipse-repo.url>
   </properties>
   <repositories>
@@ -38,6 +46,11 @@
       <id>platform</id>
       <layout>p2</layout>
       <url>${eclipse-repo.url}</url>
+    </repository>
+    <repository>
+      <id>eclipse-license</id>
+      <layout>p2</layout>
+      <url>https://download.eclipse.org/cbi/updates/license</url>
     </repository>
   </repositories>
   <modules>
